# syncode-core

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
examples/: constrained_generation.rs  construct_mask_store.rs
grammars/: calc.lark  go.lark  json.lark  json_sugar.lark  sql.lark  tiny.lark
src/: bytes.rs  dfa.rs  ebnf.rs  generate.rs  grammar.rs  lexer.rs  lib.rs  mask.rs  parser.rs  production.rs  table.rs  terminal.rs  token.rs  types.rs
tests/: generation.rs  parser.rs
