[package]
name = "syncode-core"
version = "0.0.1"
edition = "2024"

[lib]
name = "syncode_core"
path = "src/lib.rs"


[dependencies]
bstr = "1.12.0"
regex = "1.11.1"
regex-automata = "0.4.9"
candle-core = "0.9.1"
candle-transformers = "0.9.1"
tokenizers = { version = "0.21.0", features = ["http"] }
hf-hub = "0.4.2"
rayon = "1.11.0"
fancy-regex = "0.16.1"

[profile.profiling]
inherits = "release"
debug = true
